--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flow-chart",
+  "name": "react-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-flow-renderer": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
@@ -34,5 +34,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
